--- a/dos33.html
+++ b/dos33.html
@@ -297,8 +297,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     009             INCLUDE <a class="_c01 file" href="#DOSINIT">DOSINIT</a>,,2  ; $1D00 .. $1E80, T0SC - T0SD
                     010             INCLUDE <a class="_c02 file" href="#DOSHOOK">DOSHOOK</a>,,2  ; $1E81 .. $1FCC, T0SD - T0SE
                     011             INCLUDE <a class="_c03 file" href="#CMDSCAN">CMDSCAN</a>,,2  ; $1FCD .. $2192, T0SE - T1S0
-                    012             INCLUDE <a class="_c04 file" href="#XOPNCLS">XOPNCLS</a>,,2  ; $2193 .. $####, T1S0 - ?
-                    013             INCLUDE <a class="_c05 file" href="#XLODSAV">XLODSAV</a>,,2  ; $#### .. $####
+                    012             INCLUDE <a class="_c04 file" href="#XOPNCLS">XOPNCLS</a>,,2  ; $2193 .. $2330, T1S0 - T1S2
+                    013             INCLUDE <a class="_c05 file" href="#XLODSAV">XLODSAV</a>,,2  ; $2331 .. $####, T1S2 - ?
                     014             INCLUDE <a class="_c06 file" href="#XMISCMD">XMISCMD</a>,,2  ;
                     015             INCLUDE <a class="_c07 file" href="#DOSGOER">DOSGOER</a>,,2  ;       .. $27D3,      - T1S6
                     016             INCLUDE <a class="_c08 file" href="#BLDFTAB">BLDFTAB</a>,,2  ; $27D4 .. $2883, T1S6 - T1S7
@@ -1359,20 +1359,20 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2192:60             270             RTS
 
 
-<hr>; === <a class="file" name="XOPNCLS">XOPNCLS</a> - Execute Open / Close, Page <a class="page" name="page150">150</a>, <b class="ts">T1S0</b> - <b class="ts">T?S?</b>, $<span class="adr">A193</span> .. $<span class="adr">????</span>  ===<hr>
+<hr>; === <a class="file" name="XOPNCLS">XOPNCLS</a> - Execute Open / Close, Page <a class="page" name="page150">150</a>, <b class="ts">T1S0</b> - <b class="ts">T1S2</b>, $<span class="adr">A193</span> .. $<span class="adr">A330</span>  ===<hr>
                     001             PAGE
-                    002 
-                    003 
-                    004 
-                    005 
-                    006 
-                    007 
-                    008 
-                    009 
-                    010 
-                    011 
-                    012 
-                    013 
+                    002 ;
+                    003 ; GNXTC - GET NEXT CHAR
+                    004 ;
+                    005 GNXTC       EQU *
+2193:AE 5D 2A       006             LDX LBUFD
+2196:BD 00 02       007             LDA LFUFF,X     ; GET NEXT CHAR AND IF
+2199:C9 8D          008             CMP #$8D        ; IS IT A CR
+219B:F0 06          009             BEQ GNXTCR      ; THEN RETURN WITHOUT
+219D:E8             010             INX             ; INCR TO NEXT CHAR
+219E:8E 5D 2A       011             STX LBUFD
+21A1:C9 AC          012             CMP #','+$80    ; TEST FOR COMMA
+21A3:60             013 GNXTCR      RTS
                     014 
                     015 
                     016 
@@ -1647,12 +1647,12 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     285 
                     286 
                     287 
-                    288 
-                    289 
-                    290 
+232A:20 FC A2       288             JSR CLOSE       ; GO CLOSE
+232D:4C 16 23       289             JMP CLALL       ; START OVER
+2330:60             290 CL2         RTS             ; DONE
 
 
-<hr>; === <a class="file" name="XLODSAV">XLODSAV</a> - Execute Load / Save, Page <a class="page" name="page140">140</a>, <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="XLODSAV">XLODSAV</a> - Execute Load / Save, Page <a class="page" name="page140">140</a>, <b class="ts">T1S2</b> - <b class="ts">T1S?</b>, $<span class="adr">A331</span> .. $<span class="adr">A???</span>===<hr>
                     001 
                     002 
                     003 
@@ -6959,8 +6959,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
  <span class="c01" href="#DOSINIT">DOSINIT</span> ; $1D00 .. $1E80, T0SC - T0SD
  <span class="c02" href="#DOSHOOK">DOSHOOK</span> ; $1E81 .. $1FCC, T0SD - T0SE
  <span class="c03" href="#CMDSCAN">CMDSCAN</span> ; $1FCD .. $2192, T0SE - T1S0
- <span class="c04" href="#XOPNCLS">XOPNCLS</span> ; $2193 .. $####, T1S0 - ?
- <span class="c05" href="#XLODSAV">XLODSAV</span> ; $#### .. $####
+ <span class="c04" href="#XOPNCLS">XOPNCLS</span> ; $2193 .. $2330, T1S0 - T1S2
+ <span class="c05" href="#XLODSAV">XLODSAV</span> ; $2331 .. $####, T1S2 - ?
  <span class="c06" href="#XMISCMD">XMISCMD</span> ;
  <span class="c07" href="#DOSGOER">DOSGOER</span> ;       .. $27D3,      - T1S6
  <span class="c08" href="#BLDFTAB">BLDFTAB</span> ; $27D4 .. $2883, T1S6 - T1S7
