--- a/dos33.html
+++ b/dos33.html
@@ -92,13 +92,13 @@ a.line { /* line number */
     text-decoration: none; /* remove underlink from data link */
 }
 /* Link to Macro Definition */
-a.macro {
+a.macro { /* TODO: rename to "DO" */
     color: #F00;           /* macro link = Red */
     text-decoration: none; /* remove underlink from data link */
     font-weight: normal;   /* remove bold */
 }
 /* Link to Macro Label */
-a.name {
+a..name {
     color: #444;
     font-style: italic;
 }
@@ -163,7 +163,7 @@ span.adr {
 span.page {
     color: #080; /* green */
 }
-span.macro {
+.macro { /* macro line bg */
     background-color:#EEE; /* grey */
 }
 span.patch {
@@ -8201,12 +8201,15 @@ I've annotated <a class="mem">*wastes*</a> locations in the listing where memory
             <tr><td>T0S0</td><td>$B3..$FD      </td><td><a class="file" href="#BOOTLDR">BOOTLDR</a></td><td align="right">   75</td><td><a class="d" href="#"           >     </a></td></tr>
             <tr><td>T0S1</td><td>     $FF      </td><td><a class="file" href="#BOOTLDR">BOOTLDR</a></td><td align="right">    1</td><td><a class="d" href="#"           >     </a></td></tr>
             <tr><td>T0S3</td><td>$FD..$FF      </td><td><a class="file" href="#MSWAITR">MSWAITR</a></td><td align="right">    3</td><td>Func n/a, Line #<a class="line" href="#mswaitr_030">30</a> (page align <a class="x" href="#MSWAIT">MSWAIT</a>)</a></td></tr>
-            <tr><td>T0S6</td><td>$00..$55      </td><td><a class="file" href="#MSWAITR">MSWAITR</a></td><td align="right">   86</td><td>Func n/a, Variable <a class="d" href="#NBUF2"      >NBUF2</a></td></tr>
-            <tr><td>T0S9</td><td>$DA..$DB      </td><td><a class="file" href="#DOSPTCH">DOSPTCH</a></td><td align="right">    2</td><td>Func <class="x" href="#RCPATCH">RCPATCH</a>, Line #<a class="line" href="#dosptch_028">28</a>, (JMP <a class="x" href="#RCBACK">RCBACK</a> instead of RTS</td></tr>
-            <tr><td>T0SA</td><td>$1B49 .. $1B49</td><td><a class="file" href="#RELOCTR">RELOCTR</a></td><td align="right">    1</td><td><a class="d" href="#_1B49"></a> Since <a class="v" href="#ZPGFCB">ZPGFCB</a> can never point to page 0 we can switch<br>
-From: LDY ZPGFCB+1, PLA, JMP<br>
-To..: PLA, LDY ZPGFCB+1, BNE</tr></td>
-
+            <tr><td>T0S6</td><td>$00..$55      </td><td><a class="file" href="#MSWAITR">MSWAITR</a></td><td align="right">   86</td><td>Func n/a, Variable <a class="d" href="#NBUF2"      >NBUF2</a> -- data should be AFTER code</td></tr>
+            <tr><td>T0S9</td><td>$DA..$DB      </td><td><a class="file" href="#DOSPTCH">DOSPTCH</a></td><td align="right">    2</td><td>Func <a class="x" href="#RCPATCH">RCPATCH</a>, Line #<a class="line" href="#dosptch_028">28</a>, (JMP <a class="x" href="#RCBACK">RCBACK</a> instead of RTS</td></tr>
+            <tr><td>T0SA</td><td>$1B49 .. $1B49</td><td><a class="file" href="#RELOCTR">RELOCTR</a></td><td align="right">    1</td><td>Func <a class="x" href="#DR2A">DR2A</a>, Since <a class="v" href="#ZPGFCB">ZPGFCB</a> can never point to page 0 we can switch the order of these <a class="x" href="#_1B49">instructions</a>:
+<br>From: LDY ZPGFCB+1
+<br>&nbsp; &nbsp; &nbsp; PLA
+<br>&nbsp; &nbsp; &nbsp; JMP DR2C
+<br>To..: PLA
+<br>&nbsp; &nbsp; &nbsp; LDY ZPGFCB+1
+<br>&nbsp; &nbsp; &nbsp; BNE DR2C</tr></td>
             <tr><td>T0SB</td><td>$81..$FF</td><td><a class="file" href="#RELOCTR">RELOCTR</a></td><td align="right">  127</td><td><a class="d" href="#"           >     </a></td></tr>
             <tr><td>T0SC</td><td>$1D78 .. $1D  </td><td><a class="file" href="#DOSINIT">DOSINIT</a></td><td align="right">   10</td><td><a class="d" href="#_1D78">AS2VT </a></td></tr>
             <tr><td>T2S2</td><td>$33BB .. $33BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>Unused <a class="_33BB">sector type 4</a> = VTOC</a></td></tr>
@@ -8219,6 +8222,7 @@ To..: PLA, LDY ZPGFCB+1, BNE</tr></td>
             <tr><td>T2S2</td><td>$33F3 .. $ </td></tr>
             <tr><td>T2S2</td><td>$3497 .. $34BA</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    8</td><td>VTOC <a class="d" href="#_3497">tracks 41+</a> sector bitmaps</td></tr>
             <tr><td>T2S2</td><td>$34BB .. $34BB</td><td><a class="file" href="#FVCBUFS">FVCBUFS</a></td><td align="right">    1</td><td>CAT Unused <a class="_34BB">sector type 2</a> = CATALOG</a></td></tr>
+            <tr class="macro"><td>Total</td><td>n/a           </td><td>n/a                                       </td><td align="right">  160</td><td> </td></tr>
         </table>
     </font>
 </div>
@@ -8232,7 +8236,7 @@ To..: PLA, LDY ZPGFCB+1, BNE</tr></td>
     <font style="font-family: monospace;">
         <table border="1" style="border-width: 1px; border-collapse: collapse">
             <tr><td>T/S        </td><td>File   </td><td>Description                             </td></tr>
-            <tr><td>T0S5       </td><td>MSWAITR</td><td>Wastes 256 bytes for NBUF1              </td></tr>
+            <tr><td>T0S5       </td><td>MSWAITR</td><td>Wastes 256 bytes for <a class="v" href="#NBUF1">NBUF1</a> - entire sector is zero              </td></tr>
             <tr><td>T2S3       </td><td>FCVBUFS</td><td>Wastes 255 bytes for a <a class="dumb" href="#_3F00">single byte</a> ($02) @ $BB !</td></tr>
             <tr><td>T2S4       </td><td>FCVBUFS</td><td>Wastes 256 bytes!                       </td></tr>
             <tr><td>T2S5 - T2SF</td><td>n/a    </td><td>Rest of Track 2 is reserved. See: <a class="dumb" href="#HNTDAFS4">HNTDAFS #4</a> and <span class="todo">TODO</span></td></tr>
@@ -8247,8 +8251,8 @@ To..: PLA, LDY ZPGFCB+1, BNE</tr></td>
     <tr><td>Total Spelling mistakes:             </td><td>  5</td></tr> <!-- :%s/\*spelling\*//gn -->
     <tr><td>Total Functions:                     </td><td> 99</td></tr> <!-- :%s/class="f"//gn -->
     <tr><td>Total Variables:                     </td><td>102</td></tr> <!-- :%s/class="d"//gn -->
-    <tr><td>Total Wasted bytes (run-time memory):</td><td>111</td></tr>
-    <tr><td>Total Wasted sectors:                </td><td>  3</td></tr>
+    <tr><td>Total Wasted bytes (run-time memory):</td><td>160</td></tr>
+    <tr><td>Total Wasted sectors:                </td><td> 14</td></tr>
 </table>
 <p>
 
