--- a/dos33.html
+++ b/dos33.html
@@ -92,8 +92,8 @@ a.line { /* line number */
     text-decoration: none; /* remove underlink from data link */
 }
 /* Link to Macro Definition */
-a.macro { /* TODO: rename to "DO" */
-    color: #F00;           /* macro link = Red */
+a.do { /* do macroname */
+    color: #80F;           /* purple */
     text-decoration: none; /* remove underlink from data link */
     font-weight: normal;   /* remove bold */
 }
@@ -294,9 +294,9 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     002             LST  ON,VSYM
                     003             MSB  OFF
                     004 <a class="f" name="ORIGIN">ORIGIN      </a>EQU  $1B00
-                    005 <a class="macro" name="DIAGMOD">DIAGMOD     </a>EQU  0
-                    006 <a class="macro" name="DOS33B" >DOS33B      </a>EQU  1
-                    007 <a class="macro" name="ULC"    >ULC         </a>EQU  0              ; Unofficial commentary
+                    005 <a class="do" name="DIAGMOD">DIAGMOD     </a>EQU  0
+                    006 <a class="do" name="DOS33B" >DOS33B      </a>EQU  1
+                    007 <a class="do" name="ULC"    >ULC         </a>EQU  0              ; Unofficial commentary
                     008             INCLUDE <a class="_c00 file" href="#RELOCTR">RELOCTR</a>,,2  ; $1B00 .. $1CFF, T0SA - T0SB
                     009             INCLUDE <a class="_c01 file" href="#DOSINIT">DOSINIT</a>,,2  ; $1D00 .. $1E80, T0SC - T0SD
                     010             INCLUDE <a class="_c02 file" href="#DOSHOOK">DOSHOOK</a>,,2  ; $1E81 .. $1FCC, T0SD - T0SE
@@ -4510,7 +4510,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     003 <a class="d" name="REMDR3"     id="REMDR3"     >REMDR3      </a>EQU 256-HERE3L                                  ; Remainder 3
 35FE:00 00          004             ORG *+<a class="v" href="#REMDR3">REMDR3</a>                                    ; *<a class="dumb" name="waste_35fe">wastes</a>* 2 bytes to page align BOOTLDR
                     005 <a class="d" name="TRK0LDR"    id="TRK0LDR"    >TRK0LDR     </a>EQU *
-                    006     DO &gt;<a class="v" href="#TRK0LDR">TRK0LDR</a><span class="macro">
+                    006     DO &gt;<a class="do" href="#TRK0LDR">TRK0LDR</a><span class="macro">
                     007         ??? ;DELIBERATE ERROR IF NOT AT PAGE BOUNDARY       </span>
                     008     FIN
                     009 ***************************
@@ -6393,14 +6393,14 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3DB6:08             013             PHP             ;AND SAVE THAT
 3DB7:B0 03          014             BCS <a class="x" href="#TRYTRK2">TRYTRK2</a>     ;MUST PRENIBBLE FOR WRITE.
                     015     LST OFF
-                    016     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    016     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     017         LDY #TC17           ;SAY 'PRENIBBLIZING'
                     018         STY TL7                                 </span>
                     019     FIN
                     020     LST ON
 3DB9:20 00 38       021             JSR <a class="x" href="#PRENIB16">PRENIB16</a>
                     022     LST OFF
-                    023     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    023     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     024         LDY #SP             ;PRENIB FINISHED    
                     025         STY TL7                                 </span>
                     026     FIN
@@ -6409,7 +6409,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3DBE:8C 78 05       029             STY RETRYCNT
 3DC1:AE F8 05       030 <a class="f" name="TRYADR"      >TRYADR      </a>LDX SLOT        ;GET SLOT NUM INTO X-REG
                     031     LST OFF
-                    032     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    032     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     033         LDA #TC4            ;SAY 'READING ADDRESS'          
                     034         STA TL4                                             
                     035         LDA #SP             ;SAY 'NO ADDRESS ERROR' (YET)   
@@ -6418,14 +6418,14 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     038     LST ON
 3DC4:20 44 39       039             JSR <a class="x" href="#RDADR16">RDADR16</a>     ;READ NEXT ADDRESS FIELD        ; ^
                     040     LST OFF
-                    041     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    041     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     042         LDA #SP             ;ADDRESS-READ DONE              
                     043         STA TL4                                             </span>
                     044     FIN
                     045     LST ON
 3DC7:90 24          046             BCC <a class="x" href="#RDRIGHT">RDRIGHT</a>     ;IF READ IT RIGHT, HURRAH!      ; v
                     047     LST OFF
-                    048     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    048     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     049         LDA #TC6            ;ADDRESS-READ DONE              
                     050         STA TL4                                             </span>
                     051     FIN
@@ -6495,7 +6495,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3E2B:B9 B8 3F       115             LDA <a class="v" href="#INTRLEAV"   >INTRLEAV</a>,Y  ;COMPUTE PHYSICAL SECTOR        ; DOS Sector Interleave/Skew Mapping
 <hr>3E2E:C5 2D          116             CMP <a class="v" href="#SECT"   >SECT</a>        ;DID WE GET THE SECTOR?         ; === Page <a class="page" name="page124">124</a> ===
                     117     LST OFF
-                    118     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    118     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     119         BEQ GOTSECT         ;=&gt;WE FOUND IT!                         
                     120         LDA #TC5            ;SAY 'LATENCY'                          
                     121         STA TL5                                                     
@@ -6513,7 +6513,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     133 *
                     134 <a class="f" name="GOTSECT"     >GOTSECT     </a>EQU *
                     135     LST OFF
-                    136     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    136     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     137         LDA #SP             ;SAY 'NO LATENCY'                   
                     138         STA TL5                                                 
                     139         INC SCOUNT          ;BUMP 'SECTORS-ACCESSED' COUNT      </span>
@@ -6522,7 +6522,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3E32:28             142             PLP
 3E33:90 1C          143             BCC <a class="x" href="#WRIT">WRIT</a>        ;CARRY WAS SET FOR READ OPERATION. ; v
                     144     LST OFF
-                    145     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    145     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     146         LDA #TC9            ;SAY 'READING'                  
                     147         STA TL9                                             
                     148         LDA #SP                                             
@@ -6531,14 +6531,14 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     151     LST ON
 3E35:20 DC 38       152             JSR <a class="x" href="#READ16">READ16</a>      ;CLEARED FOR WRITE
                     153     LST OFF
-                    154     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    154     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     155         LDA #SP                                             
                     156         STA TL9                                             </span>
                     157     FIN
                     158     LST ON
 3E38:08             159             PHP             ;SAVE STATUS OF READ OPERATION
                     160     LST OFF
-                    161     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    161     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     162         BCC <a class="x" href="#GOODREAD">GOODREAD</a>        ;NO ERROR                       
                     163         LDA #TC10           ;SAY 'READ ERROR'               
                     164         STA TL10                                            
@@ -6553,14 +6553,14 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3E3C:A2 00          173             LDX #0          ;SET TO POSTNIBLIZE
 3E3E:86 26          174             STX T0          ; All 256 BYTES OF THE SECTOR
                     175     LST OFF
-                    176     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    176     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     177         LDA #TC11           ;SAY 'POSTINIBBLIZING'          </span>;POST_IN_NIBBLIZING<span class="macro">
                     178         STA TL11                                            </span>
 <hr>                    179     FIN                                                     ; === Page <a class="page" name="page125">125</a> ===
                     180     LST ON
 3E40:20 C2 38       181             JSR <a class="x" href="#POSTNB16">POSTNB16</a>    ;DECODE INTO REAL WORLD DATA
                     182     LST OFF
-                    183     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    183     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     184         LDA #SP             ;POSTNIB COMPLETED              
                     185         STA TL11                                            </span>
                     186     FIN
@@ -6573,7 +6573,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3E4B:91 48          193             STA (<a class="v" href="#IOBPL"   >IOBPL</a>),Y
 3E4D:BD 88 C0       194             LDA <a class="v"  href="#MOTOROFF">MOTOROFF</a>,X  ; TURN IT OFF...
                     195     LST OFF
-                    196     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    196     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     197 * AVERAGE LATENCY = LCOUNT/SCOUNT                           
                     198         LDA LCOUNT          ; GET TOTAL LATENCY             
                     199         LDY #0              ; CLEAR QUOTIENT                
@@ -6598,7 +6598,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3E50:60             218             RTS
                     219 <a class="f" name="WRIT"        >WRIT        </a>EQU *
                     220     LST OFF
-                    221     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span style="macro">
+                    221     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span style="macro">
                     222        LDA #TC8             ; SAY 'WRITING'                 
                     223        STA TL8                                              </span>
                     224     FIN
@@ -6606,7 +6606,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3E51:20 2A 38       226             JSR <a class="x" href="#WRITE16">WRITE16</a>     ; WRITE NYBBLES NOW             ; ^ WRITRTN, page 137
 
                     227     LST OFF
-                    228     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a><span class="macro">
+                    228     DO <a class="do" href="#DIAGMOD">DIAGMOD</a><span class="macro">
                     229        LDA #SP              ; SAY 'WRITING'                 
                     230        STA TL8                                              </span>
                     231     FIN
@@ -6697,7 +6697,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     011 *
                     012             REP 40
                     013 <a class="f" name="DSKFORM"    >DSKFORM     </a>EQU *
-                    014     DO <a class="macro" href="#DIAGMOD">DIAGMOD</a>              ;ELIMINATE FMTR FROM DIAG ASSEMBLY<span class="macro">
+                    014     DO <a class="do" href="#DIAGMOD">DIAGMOD</a>              ;ELIMINATE FMTR FROM DIAG ASSEMBLY<span class="macro">
                     015         LST OFF                                             </span>
                     016     ELSE
 3EAF:A0 03          017             LDY #<span class="adr">3</span>                                          ; *<b class="magic">magic number</b>* IOB_OFFSET_VOL = $3
@@ -6927,7 +6927,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3FCE:AD 81 C0       023             LDA $<span class="adr">C081</span>                                       ; *<b class="magic">magic number</b>* 1st read = read ROM, 2nd read = write enable LC Bank 2
 3FD1:A9 00          024             LDA #<span class="adr">0</span>
 3FD3:8D 00 E0       025             STA $<span class="adr">E000</span>                                       ; *<b class="magic">magic number</b>* *sigh* Forces Language Card to reload
-                    026     DO <a class="macro" href="#DOS33B">DOS33B</a>
+                    026     DO <a class="do" href="#DOS33B">DOS33B</a>
 3FD6:20 76 3A       027             JSR <a class="x" href="#OFF80" >OFF80</a>                                       
 3FD9:4C 44 37       <a class="line" name="dosptch_028">028</a>             JMP <a class="x" href="#RCBACK">RCBACK</a>                                      ; *wastes* 2 bytes Why not RTS ???
                     029     ELSE<span class="macro">
@@ -6955,7 +6955,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     051 *****************************
                     052 <a class="d" name="ENDP1"      >ENDP1       </a>EQU *-1         ; END OF DOS PATCHES FOR RELOCTR
                     053 <a class="d" name="ENDOFDOS"   >ENDOFDOS    </a>EQU *
-<hr>                    054     DO <a class="v" href="#ENDOFDOS">ENDOFDOS</a>-$4000                                       ; === Page <a class="page" name="page53">53</a> ===<span class="macro">
+<hr>                    054     DO <a class="do" href="#ENDOFDOS">ENDOFDOS</a>-$4000                                       ; === Page <a class="page" name="page53">53</a> ===<span class="macro">
                     055         FAIL 2,'DOS LENGTH NOT CORRECT'                     </span>
                     056     FIN
 <hr><hr>
